aspNetSampleApp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetsampleapp
spec:
  selector:
    app: aspnetsampleapp
  ports:
  - port: 80
    targetPort: 80
