aspNetSampleApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnetsampleapp
  labels:
    name: aspnetsampleapp
    
spec:
  ingressClassName: nginx
  rules:
  - host: ratemybeer12345.westeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aspnetsampleapp
            port: 
              number: 80
